jaeger/example/hotrod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-example-hotrod
  labels:
    app: jaeger-example-hotrod
spec:
  selector:
    app: jaeger-example-hotrod
  ports:
    - name: frontend
      port: 8080
      targetPort: 8080
    - name: customer
      port: 8081
      targetPort: 8081
    - name: driver
      port: 8082
      targetPort: 8082
    - name: route
      port: 8083
      targetPort: 8083
